2011-04-18 Javier Lanz <javier.lanz@artica.es>

	* include/functions_filemanager.php: Fixed a problem with html entities
	* include/get_file.php: Added base64_decode for getting a get parameter

	Fixes: #3286063

2011-04-14 Javier Lanz <javier.lanz@artica.es>

	* godmode/massive/massive_edit_modules.php: Added functionality to edit
	SNMP version on massive operations

2011-04-13 Sancho Lerena <slerena@artica.es>

	* operation/servers/view_server_detail.php,
	godmode/servers/manage_recontask.php,
	godmode/servers/manage_recontask_form.php: Fixes bug #3286027. Also implement
	the new "manual" mode for recon tasks.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* operation/events/events_list.php, operation/events/events.php: fixed
	nested forms incompatible with some browsers that fail when validate
	several events and some errors in javascript when validate individual error.

2011-04-3 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.
	
	* pandora_console/godmode/modules/manage_network_templates.php: fixed the
	output of description and name, and fixed the buttons to delete and export.

2011-03-25 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	Merged bugfix from trunk.

	* godmode/modules/module_list.php: Fixed wrong variable call.

2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions_config.php: fixed the update "collection_max_size"
	value.
	
	Fixes: #3220485
 
2011-03-22 Miguel de Dios  <miguel.dedios@artica.es>

	Merged bugfix from trunk.

	* include/functions.php: fixed the function "safe_url_extraclean" to pass
	the url with character -.
	
	Fixes: #3234360

2011-03-17  Sancho Lerena <slerena@artica.es>

	* include/functions_alerts.php: erased the "module_action_threshold"
	in the function "add_alert_agent_module_action".
        
 	* godmode/alerts/alert_list.php: cleaned source code style.

2011-03-16  Sancho Lerena <slerena@artica.es>
